# bot-whatsapp-cs

./: .gitignore  .~lock.mantenedores.xlsx#  PyWhatKit_DB.txt  README.md  app.py  bot2.py  mantenedores.xlsx  pyproject.toml  whatssbot.py
